styles.css
:root {
    --header: 3rem;
	--footer: 3rem;
	--main: calc(100vh - calc(var(--header) + var(--footer)));
}

body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
}

.l-center {
    color: white;
    padding: 16px 16px;
    width: 70vw;
    margin: 0 auto 48px auto;
}

.twoBlock{
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}


.header{
    display: flex;
    justify-content: space-between;
    font-size: min(1.5vh,1.5vw);
    height: 200px;
    align-items: flex-end;
}

h1 {
    font-size: 3em;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 1vw;
    margin: 0;
    padding: 0;
}

a{
    color: #e5e7eb;
    text-decoration: none;
}

h2{
    font-size: 32px;
}


.container  {
    font-size: 48px;
    font-weight: 900;
    background-color: #1F2937;
    padding: 16px;
}


p {
    color: #e5e7eb;
    font-size: 1em;
}

button {
    background: #3882f6;
    color: white;
    border-style: none;
    padding: 0.5em 0.5em;
    cursor: pointer;
    border-radius: 1em;
    font-size: 1.2em;
    transition: transform 0.5s ease-in-out;
}

button:hover {
  transform: translateY(-20px);
}

img {
    width: (500px + 0.075vw);
    height: auto;
}


button.signUpButton {
    border: solid;
    color: white;
}

.randomInfo {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.subtextImg {
    width: 200px;
    height: 200px;
    object-fit: cover;
    border-radius: 15px;
    border: solid;
}
.subtextHeading {
    font-weight: bold;
    text-align: center;
}

.subtext {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 96px;
}

.subtextContainer {
    
    text-align: center;
    max-width: 15em;
}

.randomInfoContainer {
    margin-top: 10px;
}

.quotation {
    display: flex;
    flex-direction: column;
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    text-align: center;
    color: #1f2937;
    width: 800px;
    justify-content: flex-start;

}

.quoteContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #e5e7eb;
    padding: 70px;
    margin: 48px 0;
}

.author {
    margin-left: auto;
    font-style: normal;
    font-weight: bold;
}

.callToActionSection {
    display: flex;
    justify-content: center;
    align-items: center;
    
    color: white;
    
}

.callToActionContents {
    padding: 40px 100px;
    background-color: #3882f6;
    border-radius: 10px;
    display: flex;
    gap: 96px;
}
.mainContent {
    height: var(--main);
	margin-right: auto;
	margin-left: auto;
}

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1f2937;
    height: var(--footer);
    color: white;
    font-size: 2em;
    padding: 50px;
}

@media screen and (max-width: 2700px) {
    
    .twoBlock {
        flex-direction: column-reverse;
    }
    .hero {
        text-align: center;
    }
    img[src="assets/images/yunjin.jpg"] {
        margin-top: 48px;
    }
    .subtext {
        flex-direction: column;
    }
}

